OHRI-2033 Fix the overlapping text issue for the repeating obs-group

--- a/src/components/group/ohri-obs-group.scss
+++ b/src/components/group/ohri-obs-group.scss
@@ -23,11 +23,13 @@
 /** Targets carbon's multiselect */
 .obsGroupColumn > div > div > div {
   max-width: 18rem !important;
+  margin-right: 3rem;
 }
 
 /** Targets carbon's dropdown */
 .obsGroupColumn > div > div > div > div {
   max-width: 18rem !important;
+  margin-right: 3rem;
 }
 
 .parent{
