--- a/src/components/previous-value-review/previous-value-review.scss
+++ b/src/components/previous-value-review/previous-value-review.scss
@@ -11,10 +11,10 @@
 
 .row {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: baseline;
 }
 
 .reuseButton {
-  margin-left: 3rem;
+  margin-left: 0;
 }
